[gd_scene load_steps=6 format=2]

[ext_resource path="res://test/Test.gd" type="Script" id=1]
[ext_resource path="res://game/ExplosionContainer.gd" type="Script" id=2]
[ext_resource path="res://gui/player/PlayerGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/DamageContainer.gd" type="Script" id=4]
[ext_resource path="res://enemies/protector/Protector.tscn" type="PackedScene" id=5]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="ExplosionContainer" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PlayerGUI" parent="." instance=ExtResource( 3 )]

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="DamageContainer" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Protector" parent="." instance=ExtResource( 5 )]
position = Vector2( 487.694, 260.549 )
